more dark theme layout issues

--- a/src/assets/sass/black-dashboard/custom/_card.scss
+++ b/src/assets/sass/black-dashboard/custom/_card.scss
@@ -1,6 +1,6 @@
 .card{
     background: $card-black-background;
-    border: 0;
+    border: 5;
     position: relative;
     width: 100%;
     margin-bottom: 30px;
