--- a/src/assets/sass/black-dashboard/custom/_tables.scss
+++ b/src/assets/sass/black-dashboard/custom/_tables.scss
@@ -156,7 +156,7 @@
 }
 
 .table-responsive{
-  overflow: scroll;
+  overflow: hidden;
   padding-bottom: 10px;
 }
 
